--- a/Linear Regression 2016.ipynb
+++ b/Linear Regression 2016.ipynb
@@ -295,7 +295,9 @@
     }
    ],
    "source": [
+    "# Assigning Id to each Country\n",
     "top_df['CountryId'] = [(x+1) for x in range(25)]\n",
+    "\n",
     "print(top_df.shape)\n",
     "top_df.head()"
    ]
@@ -673,6 +675,7 @@
     }
    ],
    "source": [
+    "# Adding country_id column to summer df\n",
     "df = pd.merge(df,top_df, how = 'left', on = 'Country')\n",
     "print(df.shape)\n",
     "df.head()"
@@ -985,7 +988,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Finding total medals won per year by each country"
+    "#### Total medals won per year by all the countries"
    ]
   },
   {
@@ -1803,7 +1806,7 @@
     }
    ],
    "source": [
-    "# 'CountryId' column to the front\n",
+    "# Bring 'CountryId' column to the front\n",
     "col = df.pop('CountryId')\n",
     "df.insert(0,'CountryId', col)\n",
     "\n",
@@ -3234,7 +3237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -3259,7 +3262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3279,7 +3282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -3304,7 +3307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -3313,7 +3316,7 @@
        "Text(0.5, 1.0, 'Residual Plot')"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -3344,74 +3347,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Linear regression model for scaled data\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import StandardScaler\n",
-    "\n",
-    "# Create a StandardScater model and fit it to the training data\n",
-    "X_scaler = StandardScaler().fit(X_train)\n",
-    "\n",
-    "X_train_scaled = X_scaler.transform(X_train)\n",
-    "X_test_scaled = X_scaler.transform(X_test)\n",
-    "\n",
-    "y_scaler = StandardScaler().fit(y_train)\n",
-    "\n",
-    "y_train_scaled = y_scaler.transform(y_train)\n",
-    "y_test_scaled = y_scaler.transform(y_test)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Fit the model to the scaled training data and calculate the scores"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training Score: 0.9418705478899069\n",
-      "Testing Score: 0.9332843845045122\n"
-     ]
-    }
-   ],
-   "source": [
-    "model2 = LinearRegression()\n",
-    "\n",
-    "model2.fit(X_train_scaled, y_train_scaled)\n",
-    "\n",
-    "training_score = model2.score(X_train_scaled, y_train_scaled)\n",
-    "testing_score = model2.score(X_test_scaled, y_test_scaled)\n",
-    "\n",
-    "print(f\"Training Score: {training_score}\")\n",
-    "print(f\"Testing Score: {testing_score}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Using model1 to predict medals for test_data\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -3426,7 +3368,7 @@
        "         2.48284912])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3439,7 +3381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -3450,7 +3392,7 @@
        "         7.,   8.,   2.])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3462,7 +3404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -3701,7 +3643,7 @@
        "24          Greece         25       6          2"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3714,7 +3656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -3979,7 +3921,7 @@
        "24          Greece         25       6          2     -4"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3991,15 +3933,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE: 31.48, R2: 0.9333970579540831\n",
-      "R2: 0.9333970579540831\n"
+      "MSE: 31.48, R2: 0.9333970579540831\n"
      ]
     }
    ],
@@ -4051,6 +3992,74 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Linear regression model for scaled data\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# Create a StandardScater model and fit it to the training data\n",
+    "X_scaler = StandardScaler().fit(X_train)\n",
+    "\n",
+    "X_train_scaled = X_scaler.transform(X_train)\n",
+    "X_test_scaled = X_scaler.transform(X_test)\n",
+    "\n",
+    "y_scaler = StandardScaler().fit(y_train)\n",
+    "\n",
+    "y_train_scaled = y_scaler.transform(y_train)\n",
+    "y_test_scaled = y_scaler.transform(y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Fit the model to the scaled training data and calculate the scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Score: 0.9418705478899069\n",
+      "Testing Score: 0.9332843845045122\n"
+     ]
+    }
+   ],
+   "source": [
+    "model2 = LinearRegression()\n",
+    "\n",
+    "model2.fit(X_train_scaled, y_train_scaled)\n",
+    "\n",
+    "training_score = model2.score(X_train_scaled, y_train_scaled)\n",
+    "testing_score = model2.score(X_test_scaled, y_test_scaled)\n",
+    "\n",
+    "print(f\"Training Score: {training_score}\")\n",
+    "print(f\"Testing Score: {testing_score}\")"
+   ]
   }
  ],
  "metadata": {
