--- a/olympic medalists.ipynb
+++ b/olympic medalists.ipynb
@@ -1097,6 +1097,169 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sport</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Height</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>Medal</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Basketball</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Judo</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>Badminton</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>172.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>Sailing</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>159.0</td>\n",
+       "      <td>55.5</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>Sailing</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>159.0</td>\n",
+       "      <td>55.5</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>271106</th>\n",
+       "      <td>Hockey</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>168.0</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>271107</th>\n",
+       "      <td>Football</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>175.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>271108</th>\n",
+       "      <td>Rowing</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>183.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>271109</th>\n",
+       "      <td>Rowing</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>183.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>271110</th>\n",
+       "      <td>Basketball</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>171.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>166706 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Sport   Age  Height  Weight  Medal\n",
+       "0       Basketball  24.0   180.0    80.0    0.0\n",
+       "1             Judo  23.0   170.0    60.0    0.0\n",
+       "31       Badminton  31.0   172.0    70.0    0.0\n",
+       "32         Sailing  30.0   159.0    55.5    0.0\n",
+       "33         Sailing  34.0   159.0    55.5    0.0\n",
+       "...            ...   ...     ...     ...    ...\n",
+       "271106      Hockey  27.0   168.0    76.0    0.0\n",
+       "271107    Football  21.0   175.0    75.0    0.0\n",
+       "271108      Rowing  24.0   183.0    72.0    0.0\n",
+       "271109      Rowing  28.0   183.0    72.0    0.0\n",
+       "271110  Basketball  33.0   171.0    69.0    0.0\n",
+       "\n",
+       "[166706 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "summer_data\n",
+    "dataframe = summer_data[[\"Sport\", \"Age\", \"Height\", \"Weight\", \"Medal\"]]\n",
+    "dataframe = dataframe.replace(\"Gold\", 1)\n",
+    "dataframe = dataframe.replace(\"Silver\", 1)\n",
+    "dataframe = dataframe.replace(\"Bronze\", 1)\n",
+    "dataframe[\"Medal\"] = dataframe[\"Medal\"].fillna(0)\n",
+    "dataframe = dataframe.dropna()\n",
+    "dataframe.to_csv(\"logistic.csv\", index = False)\n",
+    "dataframe.to_json(\"logistic.json\")\n",
+    "\n",
+    "dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 113,
    "metadata": {},
    "outputs": [
