add training test result

--- a/RandomForest_olympic_medalists.ipynb
+++ b/RandomForest_olympic_medalists.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,16 +16,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "athlete_events = pd.read_csv('../CSV for ML models/athlete_events.csv')"
+    "athlete_events = pd.read_csv('athlete_events.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "4  Speed Skating Women's 500 metres   NaN  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -240,123 +240,160 @@
      "output_type": "stream",
      "text": [
       "Basketball\n",
+      "Training Data Score: 0.9723577235772358\n",
       "Testing Data Score: 0.6866883116883117\n",
       "----------------------------------------------------\n",
       "Judo\n",
-      "Testing Data Score: 0.8229342327150084\n",
+      "Training Data Score: 0.9588963963963963\n",
+      "Testing Data Score: 0.8178752107925801\n",
       "----------------------------------------------------\n",
       "Football\n",
-      "Testing Data Score: 0.707514450867052\n",
+      "Training Data Score: 0.9175019275250579\n",
+      "Testing Data Score: 0.7040462427745665\n",
       "----------------------------------------------------\n",
       "Tug-Of-War\n",
+      "Training Data Score: 1.0\n",
       "Testing Data Score: 0.4\n",
       "----------------------------------------------------\n",
       "Athletics\n",
-      "Testing Data Score: 0.8580777860882572\n",
+      "Training Data Score: 0.9291903010658854\n",
+      "Testing Data Score: 0.8590127150336574\n",
       "----------------------------------------------------\n",
       "Swimming\n",
-      "Testing Data Score: 0.8643936458736924\n",
+      "Training Data Score: 0.9191214470284238\n",
+      "Testing Data Score: 0.8640061991476172\n",
       "----------------------------------------------------\n",
       "Badminton\n",
-      "Testing Data Score: 0.8522727272727273\n",
+      "Training Data Score: 0.9771863117870723\n",
+      "Testing Data Score: 0.8579545454545454\n",
       "----------------------------------------------------\n",
       "Sailing\n",
-      "Testing Data Score: 0.8306613226452906\n",
+      "Training Data Score: 0.9762859051436206\n",
+      "Testing Data Score: 0.8316633266533067\n",
       "----------------------------------------------------\n",
       "Gymnastics\n",
+      "Training Data Score: 0.9458987783595113\n",
       "Testing Data Score: 0.9345549738219895\n",
       "----------------------------------------------------\n",
       "Art Competitions\n",
+      "Training Data Score: 1.0\n",
       "Testing Data Score: 1.0\n",
       "----------------------------------------------------\n",
       "Handball\n",
+      "Training Data Score: 0.9633267845448592\n",
       "Testing Data Score: 0.6797642436149313\n",
       "----------------------------------------------------\n",
       "Weightlifting\n",
-      "Testing Data Score: 0.8076311605723371\n",
+      "Training Data Score: 0.9692307692307692\n",
+      "Testing Data Score: 0.7996820349761526\n",
       "----------------------------------------------------\n",
       "Wrestling\n",
+      "Training Data Score: 0.9404696886947024\n",
       "Testing Data Score: 0.7657657657657657\n",
       "----------------------------------------------------\n",
       "Water Polo\n",
-      "Testing Data Score: 0.6917562724014337\n",
+      "Training Data Score: 0.9641362821279139\n",
+      "Testing Data Score: 0.6953405017921147\n",
       "----------------------------------------------------\n",
       "Hockey\n",
-      "Testing Data Score: 0.6606397774687065\n",
+      "Training Data Score: 0.9419953596287703\n",
+      "Testing Data Score: 0.6703755215577191\n",
       "----------------------------------------------------\n",
       "Rowing\n",
-      "Testing Data Score: 0.6958362738179252\n",
+      "Training Data Score: 0.9138823529411765\n",
+      "Testing Data Score: 0.6972477064220184\n",
       "----------------------------------------------------\n",
       "Fencing\n",
-      "Testing Data Score: 0.799328295549958\n",
+      "Training Data Score: 0.9146136618141097\n",
+      "Testing Data Score: 0.8026868178001679\n",
       "----------------------------------------------------\n",
       "Equestrianism\n",
-      "Testing Data Score: 0.8341176470588235\n",
+      "Training Data Score: 0.9168627450980392\n",
+      "Testing Data Score: 0.8364705882352941\n",
       "----------------------------------------------------\n",
       "Shooting\n",
-      "Testing Data Score: 0.902072909220872\n",
+      "Training Data Score: 0.9745055992375506\n",
+      "Testing Data Score: 0.9013581129378128\n",
       "----------------------------------------------------\n",
       "Boxing\n",
-      "Testing Data Score: 0.8122676579925651\n",
+      "Training Data Score: 0.9275092936802974\n",
+      "Testing Data Score: 0.8150557620817844\n",
       "----------------------------------------------------\n",
       "Taekwondo\n",
-      "Testing Data Score: 0.7402597402597403\n",
+      "Training Data Score: 0.9956331877729258\n",
+      "Testing Data Score: 0.7662337662337663\n",
       "----------------------------------------------------\n",
       "Cycling\n",
-      "Testing Data Score: 0.860248447204969\n",
+      "Training Data Score: 0.9457219805262067\n",
+      "Testing Data Score: 0.8608695652173913\n",
       "----------------------------------------------------\n",
       "Diving\n",
+      "Training Data Score: 0.948849104859335\n",
       "Testing Data Score: 0.8275862068965517\n",
       "----------------------------------------------------\n",
       "Canoeing\n",
-      "Testing Data Score: 0.7865168539325843\n",
+      "Training Data Score: 0.9344159900062461\n",
+      "Testing Data Score: 0.7780898876404494\n",
       "----------------------------------------------------\n",
       "Tennis\n",
+      "Training Data Score: 0.9591315453384419\n",
       "Testing Data Score: 0.8735632183908046\n",
       "----------------------------------------------------\n",
       "Modern Pentathlon\n",
+      "Training Data Score: 0.9269183922046285\n",
       "Testing Data Score: 0.8722627737226277\n",
       "----------------------------------------------------\n",
       "Golf\n",
+      "Training Data Score: 1.0\n",
       "Testing Data Score: 0.9285714285714286\n",
       "----------------------------------------------------\n",
       "Softball\n",
       "An exception occurred\n",
       "----------------------------------------------------\n",
       "Archery\n",
+      "Training Data Score: 0.94\n",
       "Testing Data Score: 0.856\n",
       "----------------------------------------------------\n",
       "Volleyball\n",
-      "Testing Data Score: 0.6233183856502242\n",
+      "Training Data Score: 0.9595808383233533\n",
+      "Testing Data Score: 0.6278026905829597\n",
       "----------------------------------------------------\n",
       "Synchronized Swimming\n",
       "An exception occurred\n",
       "----------------------------------------------------\n",
       "Table Tennis\n",
-      "Testing Data Score: 0.8922413793103449\n",
+      "Training Data Score: 0.9553956834532374\n",
+      "Testing Data Score: 0.8836206896551724\n",
       "----------------------------------------------------\n",
       "Baseball\n",
-      "Testing Data Score: 0.5754716981132075\n",
+      "Training Data Score: 0.9716088328075709\n",
+      "Testing Data Score: 0.5660377358490566\n",
       "----------------------------------------------------\n",
       "Rhythmic Gymnastics\n",
       "An exception occurred\n",
       "----------------------------------------------------\n",
       "Rugby Sevens\n",
+      "Training Data Score: 1.0\n",
       "Testing Data Score: 0.6842105263157895\n",
       "----------------------------------------------------\n",
       "Trampolining\n",
+      "Training Data Score: 1.0\n",
       "Testing Data Score: 0.7894736842105263\n",
       "----------------------------------------------------\n",
       "Beach Volleyball\n",
+      "Training Data Score: 0.9950980392156863\n",
       "Testing Data Score: 0.9130434782608695\n",
       "----------------------------------------------------\n",
       "Triathlon\n",
+      "Training Data Score: 1.0\n",
       "Testing Data Score: 0.9104477611940298\n",
       "----------------------------------------------------\n",
       "Rugby\n",
+      "Training Data Score: 1.0\n",
       "Testing Data Score: 1.0\n",
       "----------------------------------------------------\n",
       "Lacrosse\n",
+      "Training Data Score: 1.0\n",
       "Testing Data Score: 1.0\n",
       "----------------------------------------------------\n",
       "Polo\n",
@@ -366,6 +403,7 @@
       "An exception occurred\n",
       "----------------------------------------------------\n",
       "Ice Hockey\n",
+      "Training Data Score: 1.0\n",
       "Testing Data Score: 1.0\n",
       "----------------------------------------------------\n",
       "Racquets\n",
@@ -427,6 +465,7 @@
     "\n",
     "        rf = RandomForestClassifier(n_estimators=200)\n",
     "        rf = rf.fit(X_train, y_train)\n",
+    "        print(\"Training Data Score:\", rf.score(X_train, y_train)) \n",
     "        print(\"Testing Data Score:\", rf.score(X_test, y_test))\n",
     "        sorted(zip(rf.feature_importances_, feature_names), reverse=True)\n",
     "        print(\"----------------------------------------------------\")\n",
