--- a/LogisticRegression_olympic medalists.ipynb
+++ b/LogisticRegression_olympic medalists.ipynb
@@ -17,6 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# reading csv file\n",
     "athlete_events = pd.read_csv('athlete_events.csv')"
    ]
   },
@@ -977,10 +978,11 @@
     "        X1_train, X1_test, y1_train, y1_test = train_test_split(X1, y1, random_state=42)\n",
     "        from sklearn.linear_model import LogisticRegression \n",
     "        classifier = LogisticRegression() \n",
-    "        classifier\n",
-    "\n",
+    "        \n",
+    "        #Fit (train) or model using the training data\n",
     "        classifier.fit(X1_train, y1_train)\n",
-    "\n",
+    "        \n",
+    "        #Validate the model using the test data\n",
     "        print(f\"Training Data Score: {classifier.score(X1_train, y1_train)}\") \n",
     "        print(f\"Testing Data Score: {classifier.score(X1_test, y1_test)}\")\n",
     "\n",
@@ -1639,38 +1641,49 @@
     }
    ],
    "source": [
+    "# For loop to train the Logistic Regression model and get the testing score for female athletes in every Winter Olympic Sport\n",
     "for sport in winter_sports:\n",
     "    try:\n",
     "        athlete_f = winter_data[(winter_data[\"Sport\"] == f'{sport}') & (winter_data[\"Sex\"] == \"F\")]\n",
     "        athlete_f = athlete_f[[\"Age\", \"Height\", \"Weight\", \"Medal\"]]\n",
     "        athlete_f = athlete_f.dropna(subset=['Height', 'Weight']).reset_index(drop = True)\n",
+    "        # One-hot encoding\n",
     "        athlete_f = athlete_f.replace(\"Gold\", 1)\n",
     "        athlete_f = athlete_f.replace(\"Silver\", 1)\n",
     "        athlete_f = athlete_f.replace(\"Bronze\", 1)\n",
     "        athlete_f[\"Medal\"] = athlete_f[\"Medal\"].fillna(0)\n",
     "        athlete_f = athlete_f.dropna()\n",
     "        athlete_f[\"Medal\"].unique()\n",
-    "        X1 = athlete_f[['Height', \"Weight\", \"Age\"]] \n",
-    "        print(X1.shape) \n",
-    "        y1 = athlete_f['Medal'] \n",
-    "        print(y1.shape)\n",
+    "        \n",
+    "        # # Assign X (data) and y (target)\n",
+    "        X = athlete_f[['Height', \"Weight\", \"Age\"]] \n",
+    "        print(X.shape) \n",
+    "        y = athlete_f['Medal'] \n",
+    "        print(y.shape)\n",
     "        print(sport)\n",
-    "\n",
+    "        \n",
+    "        # Split our data into training and testing\n",
     "        from sklearn.model_selection import train_test_split\n",
     "\n",
-    "        X1_train, X1_test, y1_train, y1_test = train_test_split(X1, y1, random_state=42)\n",
+    "        X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
+    "        \n",
+    "        # Create a Logistic Regression Model\n",
     "        from sklearn.linear_model import LogisticRegression \n",
     "        classifier = LogisticRegression() \n",
     "        classifier\n",
+    "        \n",
+    "        # Fit (train) or model using the training data\n",
+    "        classifier.fit(X_train, y_train)\n",
+    "        \n",
+    "        # Validate the model using the test data\n",
+    "        print(f\"Training Data Score: {classifier.score(X_train, y_train)}\") \n",
+    "        print(f\"Testing Data Score: {classifier.score(X_test, y_test)}\")\n",
+    "        \n",
+    "        # Predict the testing data point\n",
     "\n",
-    "        classifier.fit(X1_train, y1_train)\n",
+    "        #predictions = classifier.predict(X_test)\n",
     "\n",
-    "        print(f\"Training Data Score: {classifier.score(X1_train, y1_train)}\") \n",
-    "        print(f\"Testing Data Score: {classifier.score(X1_test, y1_test)}\")\n",
-    "\n",
-    "        predictions = classifier.predict(X1_test)\n",
-    "\n",
-    "        pd.DataFrame({\"Prediction\": predictions, \"Actual\": y1_test})\n",
+    "        #pd.DataFrame({\"Prediction\": predictions, \"Actual\": y_test})\n",
     "        print(\"----------------------------------------------------\")\n",
     "    except:\n",
     "        print(\"An exception occurred\")\n",
@@ -1735,6 +1748,8 @@
     }
    ],
    "source": [
+    "# Visualizing athlete with medal vs athlete without medal\n",
+    "\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "fig = plt.figure(1, figsize=(5, 5))\n",
     "axes = Axes3D(fig, elev=20, azim=45)\n",
@@ -1776,6 +1791,8 @@
     }
    ],
    "source": [
+    "# Visualizing Gold, Silver, Bronze medalists data\n",
+    "\n",
     "fig = plt.figure(1, figsize=(5, 5))\n",
     "axes = Axes3D(fig, elev=20, azim=45)\n",
     "axes.scatter(a['Age'], a['Height'], a['Weight'], c=a['Medal'], cmap=plt.cm.get_cmap(\"Spectral\"))\n",
@@ -1817,6 +1834,8 @@
     }
    ],
    "source": [
+    "# Assign X (data) and y (target)\n",
+    "\n",
     "X = Gymnastics_M[['Height', \"Weight\", \"Age\"]] \n",
     "print(X.shape) \n",
     "y = Gymnastics_M['Medal'] \n",
