--- a/LogisticRegression_olympic medalists.ipynb
+++ b/LogisticRegression_olympic medalists.ipynb
@@ -8,7 +8,9 @@
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from sklearn.linear_model import LogisticRegression \n",
+    "from sklearn.model_selection import train_test_split\n"
    ]
   },
   {
@@ -1303,38 +1305,47 @@
     }
    ],
    "source": [
+    "# For loop to train the Logistic Regression model and get the testing score for female athletes in every Winter Olympic Sport\n",
+    "\n",
     "for sport in summer_sports:\n",
     "    try:\n",
     "        athlete_f = summer_data[(summer_data[\"Sport\"] == f'{sport}') & (summer_data[\"Sex\"] == \"F\")]\n",
     "        athlete_f = athlete_f[[\"Age\", \"Height\", \"Weight\", \"Medal\"]]\n",
     "        athlete_f = athlete_f.dropna(subset=['Height', 'Weight']).reset_index(drop = True)\n",
+    "        \n",
+    "        # One-hot encoding        \n",
     "        athlete_f = athlete_f.replace(\"Gold\", 1)\n",
     "        athlete_f = athlete_f.replace(\"Silver\", 1)\n",
     "        athlete_f = athlete_f.replace(\"Bronze\", 1)\n",
     "        athlete_f[\"Medal\"] = athlete_f[\"Medal\"].fillna(0)\n",
     "        athlete_f = athlete_f.dropna()\n",
     "        athlete_f[\"Medal\"].unique()\n",
-    "        X1 = athlete_f[['Height', \"Weight\", \"Age\"]] \n",
-    "        print(X1.shape) \n",
-    "        y1 = athlete_f['Medal'] \n",
-    "        print(y1.shape)\n",
+    "        \n",
+    "        # Assign X (data) and y (target)\n",
+    "        X = athlete_f[['Height', \"Weight\", \"Age\"]] \n",
+    "        print(X.shape) \n",
+    "        y = athlete_f['Medal'] \n",
+    "        print(y.shape)\n",
     "        print(sport)\n",
     "\n",
-    "        from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "        X1_train, X1_test, y1_train, y1_test = train_test_split(X1, y1, random_state=42)\n",
-    "        from sklearn.linear_model import LogisticRegression \n",
+    "        # Split our data into training and testing\n",
+    "        X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
+    "        \n",
+    "        # Create a Logistic Regression Model\n",
     "        classifier = LogisticRegression() \n",
     "        classifier\n",
+    "        \n",
+    "        # Fit (train) or model using the training data\n",
+    "        classifier.fit(X_train, y_train)\n",
+    "        \n",
+    "        # Validate the model using the test data\n",
+    "        print(f\"Training Data Score: {classifier.score(X_train, y_train)}\") \n",
+    "        print(f\"Testing Data Score: {classifier.score(X_test, y_test)}\")\n",
+    "        \n",
+    "        # Predict the testing data point\n",
+    "        predictions = classifier.predict(X_test)\n",
     "\n",
-    "        classifier.fit(X1_train, y1_train)\n",
-    "\n",
-    "        print(f\"Training Data Score: {classifier.score(X1_train, y1_train)}\") \n",
-    "        print(f\"Testing Data Score: {classifier.score(X1_test, y1_test)}\")\n",
-    "\n",
-    "        predictions = classifier.predict(X1_test)\n",
-    "\n",
-    "        pd.DataFrame({\"Prediction\": predictions, \"Actual\": y1_test})\n",
+    "        pd.DataFrame({\"Prediction\": predictions, \"Actual\": y_test})\n",
     "        print(\"----------------------------------------------------\")\n",
     "    except:\n",
     "        print(\"An exception occurred\")\n",
@@ -1362,6 +1373,7 @@
     }
    ],
    "source": [
+    "# print out every sport in the winter Olympic\n",
     "winter_data['Sport'].unique()"
    ]
   },
@@ -1489,38 +1501,46 @@
     }
    ],
    "source": [
+    "# For loop to train the Logistic Regression model and get the testing score for male athletes in every Winter Olympic Sport\n",
     "for sport in winter_sports:\n",
     "    try:\n",
     "        athlete_m = winter_data[(winter_data[\"Sport\"] == f'{sport}') & (winter_data[\"Sex\"] == \"M\")]\n",
     "        athlete_m = athlete_m[[\"Age\", \"Height\", \"Weight\", \"Medal\"]]\n",
     "        athlete_m = athlete_m.dropna(subset=['Height', 'Weight']).reset_index(drop = True)\n",
+    "        \n",
+    "        # One-hot encoding\n",
     "        athlete_m = athlete_m.replace(\"Gold\", 1)\n",
     "        athlete_m = athlete_m.replace(\"Silver\", 1)\n",
     "        athlete_m = athlete_m.replace(\"Bronze\", 1)\n",
     "        athlete_m[\"Medal\"] = athlete_m[\"Medal\"].fillna(0)\n",
     "        athlete_m = athlete_m.dropna()\n",
     "        athlete_m[\"Medal\"].unique()\n",
-    "        X1 = athlete_m[['Height', \"Weight\", \"Age\"]] \n",
-    "        print(X1.shape) \n",
-    "        y1 = athlete_m['Medal'] \n",
-    "        print(y1.shape)\n",
+    "        \n",
+    "        # Assign X (data) and y (target)\n",
+    "        X = athlete_m[['Height', \"Weight\", \"Age\"]] \n",
+    "        print(X.shape) \n",
+    "        y = athlete_m['Medal'] \n",
+    "        print(y.shape)\n",
     "        print(sport)\n",
-    "\n",
-    "        from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "        X1_train, X1_test, y1_train, y1_test = train_test_split(X1, y1, random_state=42)\n",
-    "        from sklearn.linear_model import LogisticRegression \n",
+    "        \n",
+    "        # Split our data into training and testing\n",
+    "        X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
+    "        \n",
+    "        # Create a Logistic Regression Model\n",
     "        classifier = LogisticRegression() \n",
     "        classifier\n",
+    "        \n",
+    "        # Fit (train) or model using the training data\n",
+    "        classifier.fit(X_train, y_train)\n",
+    "        \n",
+    "        # Validate the model using the test data\n",
+    "        print(f\"Training Data Score: {classifier.score(X_train, y_train)}\") \n",
+    "        print(f\"Testing Data Score: {classifier.score(X_test, y_test)}\")\n",
+    "        \n",
+    "        # Predict the testing data point\n",
+    "        #predictions = classifier.predict(X_test)\n",
     "\n",
-    "        classifier.fit(X1_train, y1_train)\n",
-    "\n",
-    "        print(f\"Training Data Score: {classifier.score(X1_train, y1_train)}\") \n",
-    "        print(f\"Testing Data Score: {classifier.score(X1_test, y1_test)}\")\n",
-    "\n",
-    "        predictions = classifier.predict(X1_test)\n",
-    "\n",
-    "        pd.DataFrame({\"Prediction\": predictions, \"Actual\": y1_test})\n",
+    "        #pd.DataFrame({\"Prediction\": predictions, \"Actual\": y_test})\n",
     "        print(\"----------------------------------------------------\")\n",
     "    except:\n",
     "        print(\"An exception occurred\")\n",
@@ -1647,6 +1667,7 @@
     "        athlete_f = winter_data[(winter_data[\"Sport\"] == f'{sport}') & (winter_data[\"Sex\"] == \"F\")]\n",
     "        athlete_f = athlete_f[[\"Age\", \"Height\", \"Weight\", \"Medal\"]]\n",
     "        athlete_f = athlete_f.dropna(subset=['Height', 'Weight']).reset_index(drop = True)\n",
+    "        \n",
     "        # One-hot encoding\n",
     "        athlete_f = athlete_f.replace(\"Gold\", 1)\n",
     "        athlete_f = athlete_f.replace(\"Silver\", 1)\n",
@@ -1655,7 +1676,7 @@
     "        athlete_f = athlete_f.dropna()\n",
     "        athlete_f[\"Medal\"].unique()\n",
     "        \n",
-    "        # # Assign X (data) and y (target)\n",
+    "        # Assign X (data) and y (target)\n",
     "        X = athlete_f[['Height', \"Weight\", \"Age\"]] \n",
     "        print(X.shape) \n",
     "        y = athlete_f['Medal'] \n",
@@ -1663,12 +1684,10 @@
     "        print(sport)\n",
     "        \n",
     "        # Split our data into training and testing\n",
-    "        from sklearn.model_selection import train_test_split\n",
     "\n",
     "        X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
     "        \n",
     "        # Create a Logistic Regression Model\n",
-    "        from sklearn.linear_model import LogisticRegression \n",
     "        classifier = LogisticRegression() \n",
     "        classifier\n",
     "        \n",
