add comments, clean up codes

--- a/ML Models/LogisticRegression_olympic medalists.ipynb
+++ b/ML Models/LogisticRegression_olympic medalists.ipynb
@@ -8,7 +8,9 @@
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from sklearn.linear_model import LogisticRegression \n",
+    "from sklearn.model_selection import train_test_split\n"
    ]
   },
   {
@@ -17,6 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# reading csv file\n",
     "athlete_events = pd.read_csv('../CSV for ML models/athlete_events.csv')"
    ]
   },
@@ -462,6 +465,7 @@
     }
    ],
    "source": [
+    "# get the data for winter Olympic\n",
     "winter_data = filter_data[filter_data[\"Season\"] == \"Winter\"]\n",
     "winter_data.head()"
    ]
@@ -596,6 +600,7 @@
     }
    ],
    "source": [
+    "# get the data for summer Olympic\n",
     "summer_data = filter_data[(filter_data[\"Season\"] == \"Summer\")]\n",
     "summer_data.head()\n",
     "\n"
@@ -631,6 +636,7 @@
     }
    ],
    "source": [
+    "# print out every sport in the summer Olympic\n",
     "summer_data[\"Sport\"].unique()"
    ]
   },
@@ -955,35 +961,43 @@
     }
    ],
    "source": [
+    "# For loop to train the Logistic Regression model and get the testing score for male athletes in every Summer Olympic Sport\n",
+    "\n",
     "for sport in summer_sports:\n",
     "    try:\n",
     "        athlete_m = summer_data[(summer_data[\"Sport\"] == f'{sport}') & (summer_data[\"Sex\"] == \"M\")]\n",
     "        athlete_m = athlete_m[[\"Age\", \"Height\", \"Weight\", \"Medal\"]]\n",
     "        athlete_m = athlete_m.dropna(subset=['Height', 'Weight']).reset_index(drop = True)\n",
+    "        \n",
+    "        # One-hot encoding                \n",
     "        athlete_m = athlete_m.replace(\"Gold\", 1)\n",
     "        athlete_m = athlete_m.replace(\"Silver\", 1)\n",
     "        athlete_m = athlete_m.replace(\"Bronze\", 1)\n",
     "        athlete_m[\"Medal\"] = athlete_m[\"Medal\"].fillna(0)\n",
     "        athlete_m = athlete_m.dropna()\n",
     "        athlete_m[\"Medal\"].unique()\n",
+    "        \n",
+    "        # Assign X (data) and y (target)        \n",
     "        X1 = athlete_m[['Height', \"Weight\", \"Age\"]] \n",
     "        print(X1.shape) \n",
     "        y1 = athlete_m['Medal'] \n",
     "        print(y1.shape)\n",
     "        print(sport)\n",
     "\n",
-    "        from sklearn.model_selection import train_test_split\n",
-    "\n",
+    "        # Split our data into training and testing\n",
     "        X1_train, X1_test, y1_train, y1_test = train_test_split(X1, y1, random_state=42)\n",
-    "        from sklearn.linear_model import LogisticRegression \n",
+    "        \n",
+    "        # Create a Logistic Regression Model\n",
     "        classifier = LogisticRegression() \n",
-    "        classifier\n",
-    "\n",
+    "        \n",
+    "        #Fit (train) or model using the training data\n",
     "        classifier.fit(X1_train, y1_train)\n",
-    "\n",
+    "        \n",
+    "        #Validate the model using the test data\n",
     "        print(f\"Training Data Score: {classifier.score(X1_train, y1_train)}\") \n",
     "        print(f\"Testing Data Score: {classifier.score(X1_test, y1_test)}\")\n",
-    "\n",
+    "        \n",
+    "        # Predict the testing data point\n",
     "        predictions = classifier.predict(X1_test)\n",
     "\n",
     "        pd.DataFrame({\"Prediction\": predictions, \"Actual\": y1_test})\n",
@@ -1301,38 +1315,47 @@
     }
    ],
    "source": [
+    "# For loop to train the Logistic Regression model and get the testing score for female athletes in every Summer Olympic Sport\n",
+    "\n",
     "for sport in summer_sports:\n",
     "    try:\n",
     "        athlete_f = summer_data[(summer_data[\"Sport\"] == f'{sport}') & (summer_data[\"Sex\"] == \"F\")]\n",
     "        athlete_f = athlete_f[[\"Age\", \"Height\", \"Weight\", \"Medal\"]]\n",
     "        athlete_f = athlete_f.dropna(subset=['Height', 'Weight']).reset_index(drop = True)\n",
+    "        \n",
+    "        # One-hot encoding        \n",
     "        athlete_f = athlete_f.replace(\"Gold\", 1)\n",
     "        athlete_f = athlete_f.replace(\"Silver\", 1)\n",
     "        athlete_f = athlete_f.replace(\"Bronze\", 1)\n",
     "        athlete_f[\"Medal\"] = athlete_f[\"Medal\"].fillna(0)\n",
     "        athlete_f = athlete_f.dropna()\n",
     "        athlete_f[\"Medal\"].unique()\n",
-    "        X1 = athlete_f[['Height', \"Weight\", \"Age\"]] \n",
-    "        print(X1.shape) \n",
-    "        y1 = athlete_f['Medal'] \n",
-    "        print(y1.shape)\n",
+    "        \n",
+    "        # Assign X (data) and y (target)\n",
+    "        X = athlete_f[['Height', \"Weight\", \"Age\"]] \n",
+    "        print(X.shape) \n",
+    "        y = athlete_f['Medal'] \n",
+    "        print(y.shape)\n",
     "        print(sport)\n",
     "\n",
-    "        from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "        X1_train, X1_test, y1_train, y1_test = train_test_split(X1, y1, random_state=42)\n",
-    "        from sklearn.linear_model import LogisticRegression \n",
+    "        # Split our data into training and testing\n",
+    "        X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
+    "        \n",
+    "        # Create a Logistic Regression Model\n",
     "        classifier = LogisticRegression() \n",
     "        classifier\n",
+    "        \n",
+    "        # Fit (train) or model using the training data\n",
+    "        classifier.fit(X_train, y_train)\n",
+    "        \n",
+    "        # Validate the model using the test data\n",
+    "        print(f\"Training Data Score: {classifier.score(X_train, y_train)}\") \n",
+    "        print(f\"Testing Data Score: {classifier.score(X_test, y_test)}\")\n",
+    "        \n",
+    "        # Predict the testing data point\n",
+    "        predictions = classifier.predict(X_test)\n",
     "\n",
-    "        classifier.fit(X1_train, y1_train)\n",
-    "\n",
-    "        print(f\"Training Data Score: {classifier.score(X1_train, y1_train)}\") \n",
-    "        print(f\"Testing Data Score: {classifier.score(X1_test, y1_test)}\")\n",
-    "\n",
-    "        predictions = classifier.predict(X1_test)\n",
-    "\n",
-    "        pd.DataFrame({\"Prediction\": predictions, \"Actual\": y1_test})\n",
+    "        pd.DataFrame({\"Prediction\": predictions, \"Actual\": y_test})\n",
     "        print(\"----------------------------------------------------\")\n",
     "    except:\n",
     "        print(\"An exception occurred\")\n",
@@ -1360,6 +1383,7 @@
     }
    ],
    "source": [
+    "# print out every sport in the winter Olympic\n",
     "winter_data['Sport'].unique()"
    ]
   },
@@ -1487,38 +1511,46 @@
     }
    ],
    "source": [
+    "# For loop to train the Logistic Regression model and get the testing score for male athletes in every Winter Olympic Sport\n",
     "for sport in winter_sports:\n",
     "    try:\n",
     "        athlete_m = winter_data[(winter_data[\"Sport\"] == f'{sport}') & (winter_data[\"Sex\"] == \"M\")]\n",
     "        athlete_m = athlete_m[[\"Age\", \"Height\", \"Weight\", \"Medal\"]]\n",
     "        athlete_m = athlete_m.dropna(subset=['Height', 'Weight']).reset_index(drop = True)\n",
+    "        \n",
+    "        # One-hot encoding\n",
     "        athlete_m = athlete_m.replace(\"Gold\", 1)\n",
     "        athlete_m = athlete_m.replace(\"Silver\", 1)\n",
     "        athlete_m = athlete_m.replace(\"Bronze\", 1)\n",
     "        athlete_m[\"Medal\"] = athlete_m[\"Medal\"].fillna(0)\n",
     "        athlete_m = athlete_m.dropna()\n",
     "        athlete_m[\"Medal\"].unique()\n",
-    "        X1 = athlete_m[['Height', \"Weight\", \"Age\"]] \n",
-    "        print(X1.shape) \n",
-    "        y1 = athlete_m['Medal'] \n",
-    "        print(y1.shape)\n",
+    "        \n",
+    "        # Assign X (data) and y (target)\n",
+    "        X = athlete_m[['Height', \"Weight\", \"Age\"]] \n",
+    "        print(X.shape) \n",
+    "        y = athlete_m['Medal'] \n",
+    "        print(y.shape)\n",
     "        print(sport)\n",
-    "\n",
-    "        from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "        X1_train, X1_test, y1_train, y1_test = train_test_split(X1, y1, random_state=42)\n",
-    "        from sklearn.linear_model import LogisticRegression \n",
+    "        \n",
+    "        # Split our data into training and testing\n",
+    "        X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
+    "        \n",
+    "        # Create a Logistic Regression Model\n",
     "        classifier = LogisticRegression() \n",
     "        classifier\n",
+    "        \n",
+    "        # Fit (train) or model using the training data\n",
+    "        classifier.fit(X_train, y_train)\n",
+    "        \n",
+    "        # Validate the model using the test data\n",
+    "        print(f\"Training Data Score: {classifier.score(X_train, y_train)}\") \n",
+    "        print(f\"Testing Data Score: {classifier.score(X_test, y_test)}\")\n",
+    "        \n",
+    "        # Predict the testing data point\n",
+    "        #predictions = classifier.predict(X_test)\n",
     "\n",
-    "        classifier.fit(X1_train, y1_train)\n",
-    "\n",
-    "        print(f\"Training Data Score: {classifier.score(X1_train, y1_train)}\") \n",
-    "        print(f\"Testing Data Score: {classifier.score(X1_test, y1_test)}\")\n",
-    "\n",
-    "        predictions = classifier.predict(X1_test)\n",
-    "\n",
-    "        pd.DataFrame({\"Prediction\": predictions, \"Actual\": y1_test})\n",
+    "        #pd.DataFrame({\"Prediction\": predictions, \"Actual\": y_test})\n",
     "        print(\"----------------------------------------------------\")\n",
     "    except:\n",
     "        print(\"An exception occurred\")\n",
@@ -1639,38 +1671,48 @@
     }
    ],
    "source": [
+    "# For loop to train the Logistic Regression model and get the testing score for female athletes in every Winter Olympic Sport\n",
     "for sport in winter_sports:\n",
     "    try:\n",
     "        athlete_f = winter_data[(winter_data[\"Sport\"] == f'{sport}') & (winter_data[\"Sex\"] == \"F\")]\n",
     "        athlete_f = athlete_f[[\"Age\", \"Height\", \"Weight\", \"Medal\"]]\n",
     "        athlete_f = athlete_f.dropna(subset=['Height', 'Weight']).reset_index(drop = True)\n",
+    "        \n",
+    "        # One-hot encoding\n",
     "        athlete_f = athlete_f.replace(\"Gold\", 1)\n",
     "        athlete_f = athlete_f.replace(\"Silver\", 1)\n",
     "        athlete_f = athlete_f.replace(\"Bronze\", 1)\n",
     "        athlete_f[\"Medal\"] = athlete_f[\"Medal\"].fillna(0)\n",
     "        athlete_f = athlete_f.dropna()\n",
     "        athlete_f[\"Medal\"].unique()\n",
-    "        X1 = athlete_f[['Height', \"Weight\", \"Age\"]] \n",
-    "        print(X1.shape) \n",
-    "        y1 = athlete_f['Medal'] \n",
-    "        print(y1.shape)\n",
+    "        \n",
+    "        # Assign X (data) and y (target)\n",
+    "        X = athlete_f[['Height', \"Weight\", \"Age\"]] \n",
+    "        print(X.shape) \n",
+    "        y = athlete_f['Medal'] \n",
+    "        print(y.shape)\n",
     "        print(sport)\n",
+    "        \n",
+    "        # Split our data into training and testing\n",
     "\n",
-    "        from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "        X1_train, X1_test, y1_train, y1_test = train_test_split(X1, y1, random_state=42)\n",
-    "        from sklearn.linear_model import LogisticRegression \n",
+    "        X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
+    "        \n",
+    "        # Create a Logistic Regression Model\n",
     "        classifier = LogisticRegression() \n",
     "        classifier\n",
+    "        \n",
+    "        # Fit (train) or model using the training data\n",
+    "        classifier.fit(X_train, y_train)\n",
+    "        \n",
+    "        # Validate the model using the test data\n",
+    "        print(f\"Training Data Score: {classifier.score(X_train, y_train)}\") \n",
+    "        print(f\"Testing Data Score: {classifier.score(X_test, y_test)}\")\n",
+    "        \n",
+    "        # Predict the testing data point\n",
     "\n",
-    "        classifier.fit(X1_train, y1_train)\n",
+    "        #predictions = classifier.predict(X_test)\n",
     "\n",
-    "        print(f\"Training Data Score: {classifier.score(X1_train, y1_train)}\") \n",
-    "        print(f\"Testing Data Score: {classifier.score(X1_test, y1_test)}\")\n",
-    "\n",
-    "        predictions = classifier.predict(X1_test)\n",
-    "\n",
-    "        pd.DataFrame({\"Prediction\": predictions, \"Actual\": y1_test})\n",
+    "        #pd.DataFrame({\"Prediction\": predictions, \"Actual\": y_test})\n",
     "        print(\"----------------------------------------------------\")\n",
     "    except:\n",
     "        print(\"An exception occurred\")\n",
@@ -1678,11 +1720,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Logistic Regression for male athletes in Gymnastics"
+   ]
   },
   {
    "cell_type": "code",
@@ -1735,6 +1777,8 @@
     }
    ],
    "source": [
+    "# Visualizing athlete with medal vs athlete without medal\n",
+    "\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "fig = plt.figure(1, figsize=(5, 5))\n",
     "axes = Axes3D(fig, elev=20, azim=45)\n",
@@ -1776,6 +1820,8 @@
     }
    ],
    "source": [
+    "# Visualizing Gold, Silver, Bronze medalists data\n",
+    "\n",
     "fig = plt.figure(1, figsize=(5, 5))\n",
     "axes = Axes3D(fig, elev=20, azim=45)\n",
     "axes.scatter(a['Age'], a['Height'], a['Weight'], c=a['Medal'], cmap=plt.cm.get_cmap(\"Spectral\"))\n",
@@ -1817,6 +1863,8 @@
     }
    ],
    "source": [
+    "# Assign X (data) and y (target)\n",
+    "\n",
     "X = Gymnastics_M[['Height', \"Weight\", \"Age\"]] \n",
     "print(X.shape) \n",
     "y = Gymnastics_M['Medal'] \n",
@@ -1829,7 +1877,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
+    "# Split our data into training and testing\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)"
    ]
@@ -1851,7 +1899,7 @@
     }
    ],
    "source": [
-    "from sklearn.linear_model import LogisticRegression \n",
+    "# Create a Logistic Regression Model\n",
     "classifier = LogisticRegression() \n",
     "classifier\n",
     "\n",
@@ -1870,7 +1918,19 @@
       "Training Data Score: 0.9396659187235104\n",
       "Testing Data Score: 0.9367988032909499\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "# Validate the model using the test data\n",
+    "print(f\"Training Data Score: {classifier.score(X_train, y_train)}\") \n",
+    "print(f\"Testing Data Score: {classifier.score(X_test, y_test)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -1974,14 +2034,13 @@
        "[2674 rows x 2 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(f\"Training Data Score: {classifier.score(X_train, y_train)}\") \n",
-    "print(f\"Testing Data Score: {classifier.score(X_test, y_test)}\")\n",
+    "# Predict the testing data point\n",
     "\n",
     "predictions = classifier.predict(X_test)\n",
     "\n",
